--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head'); %>
   </head>
   <body class="container">
-    <header><%- include('../partials/header'); %></header>
+    <header><%- include('../partials/header',{variant: 'compact'}); %></header>
 
     <main>
       <div class="row">
