--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,16 @@
         <h1>This is great</h1>
         <p>Welcome to templating using EJS</p>
         <h2>Variable</h2>
-        <p><%= tagline %></></p>
+        <p><%= tagline %></p>
+        <ul>
+          <% mascots.forEach(function(mascot) { %>
+            <li>
+              <strong> <%= mascot.name  %></strong>
+              representing <%= mascot.organization  %>,
+              born <%= mascot.bitrh_year  %>
+            </li>
+          <% }); %>
+        </ul>
       </div>
     </main>
 
