--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,7 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/about">About</a>
+      <a class="nav-link" href="/login">Login</a>
     </li>
   </ul>
 </nav>
