--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">EJS Is Fun</a>
+  <a class="navbar-brand" href="/"
+    ><img
+      class=""
+      src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-shadow.png"
+      alt=""
+      width="50"
+    />EJS Is Fun</a
+  >
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/about">About</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/posts">All Posts</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/new-post">New Post</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" href="/login">Login</a>
     </li>
   </ul>
